unpackaged/main/default/objects/Segmento__c/Segmento__c.object-meta.xml
<CustomObject>
    <label>Segmento</label>
    <nameField>
        <label>Nombre de Segmentos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>