unpackaged/main/default/objects/Segmento__c/fields/Mts_Consruccion__c.field-meta.xml
<CustomField>
    <fullName>Mts_Consruccion__c</fullName>
    <label>Mts Consrucción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>