unpackaged/main/default/objects/Segmento__c/fields/Rango_Precios_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Rango_Precios_de_Venta__c</fullName>
    <label>Rango Precios de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>