unpackaged/main/default/objects/Segmento__c/fields/Tipo_Segmento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interés Social</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Medio Plus</fullName>
            </value>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Residencial Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>